--- a/package.json
+++ b/package.json
@@ -20,21 +20,36 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/barcode-scanner": "^4.20.0",
     "@ionic-native/camera": "^4.20.0",
     "@ionic-native/core": "~4.18.0",
+    "@ionic-native/file": "^4.5.3",
+    "@ionic-native/file-path": "^4.5.3",
+    "@ionic-native/geolocation": "^4.20.0",
+    "@ionic-native/shake": "^4.20.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
+    "@ionic-native/transfer": "^3.14.0",
+    "@ionic-native/vibration": "^4.20.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "7.1.4",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device-motion": "2.0.1",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-filepath": "1.5.1",
+    "cordova-plugin-geolocation": "4.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^3.1.2",
+    "cordova-plugin-ionic-webview": "1.2.1",
+    "cordova-plugin-shake": "0.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-vibration": "3.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.3",
     "ionicons": "3.0.0",
+    "phonegap-plugin-barcodescanner": "8.0.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
@@ -50,11 +65,18 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-ionic-webview": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-shake": {}
     },
     "platforms": [
       "android"
